--- a/Views/Movie/Create.cshtml
+++ b/Views/Movie/Create.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Filmes</h1>
 
-<h4>Movie</h4>
+<h4>Criar</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -33,12 +33,12 @@
                 <span asp-validation-for="Duration" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <div class="d-flex flex-row-reverse">
+                    <div>
+                        <a asp-action="Index" class="mr-2">Voltar</a><input type="submit" value="Criar" id="btn-submit" class="btn btn-primary btn-submit" />
+                    </div>
+                </div>
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
