--- a/Views/Movie/Delete.cshtml
+++ b/Views/Movie/Delete.cshtml
@@ -1,51 +1,56 @@
 ﻿@model Cinema.Models.Movie
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Apagar";
 }
 
-<h1>Delete</h1>
+<h1>Filmes</h1>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Movie</h4>
-    @if (ViewBag.DeleteMovieError)
-    {
-        <div class="alert alert-danger" role="alert">
-            Desculpe, o Filme não pode ser deletado por está associado a uma sessão.
+<h4>Apagar</h4>
+<div class="row">
+    <div class="col-md-4">
+        @if (ViewBag.DeleteMovieError)
+        {
+            <div class="alert alert-danger" role="alert">
+                Desculpe, o Filme não pode ser deletado por está associado a uma sessão.
+            </div>
+        }
+        <hr />
+        <dl class="row">
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.Title)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Title)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.Image)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Image)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.Description)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Description)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.Duration)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Duration)
+            </dd>
+        </dl>
+        <div class="form-group">
+            <div class="d-flex flex-row-reverse">
+                <div>
+                    <form asp-action="Delete">
+                        <a asp-action="Index" class="mr-2">Voltar</a><input type="submit" value="Apagar" id="btn-submit" class="btn btn-danger btn-submit" />
+                        <input type="hidden" asp-for="MovieId" />
+                    </form>
+                </div>
+            </div>
         </div>
-    }
-    <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Title)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Title)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Image)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Image)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Description)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Duration)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Duration)
-        </dd>
-    </dl>
-
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="MovieId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+    </div>
 </div>
