--- a/Views/Movie/Index.cshtml
+++ b/Views/Movie/Index.cshtml
@@ -5,7 +5,7 @@
 }
 <div class="container-fluid">
     <div class="row">
-        <div class="col-md-8 pl-0"><h1>Filmes |<a asp-action="Create" class="btn btn-link pl-2">ADICIONAR  <i class="fas fa-plus"></i></a></h1></div>
+        <div class="col-md-8 pl-0"><h1>Filmes |<a asp-action="Create" class="btn btn-link pl-2 pr-2">Criar<i class="fas fa-plus pl-2"></i></a></h1></div>
         <div class="col-md-4">
             <form asp-action="Index" method="get">
                 <div class="row">
@@ -61,7 +61,7 @@
                     @Html.DisplayFor(modelItem => item.Duration)
                 </td>
                 <td class="text-center">
-                    <a asp-action="Details" asp-route-id="@item.MovieId" data-bs-toggle="tooltip" data-bs-placement="left" title="Visualizar"><i class="far fa-eye"></i></a>
+                    <a asp-action="Details" asp-route-id="@item.MovieId" data-bs-toggle="tooltip" data-bs-placement="left" title="Detalhes"><i class="far fa-eye"></i></a>
                     @if (User.IsInRole("Manager"))
                     {
                         <a asp-action="Edit" asp-route-id="@item.MovieId" data-bs-toggle="tooltip" data-bs-placement="left" title="Editar"><i class="fas fa-edit"></i></a>
