--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - cinema</title>
+    <title>@ViewData["Title"] - Cinema Manager</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet" href="~/css/custom.css" />
@@ -17,7 +17,7 @@
                     <h3><i class="fas fa-video"></i> CINEMA</h3>
                 </a>
                 <div class="d-flex flex-row-reverse ">
-                    @await Html.PartialAsync("_LogoutPartial") 
+                    @await Html.PartialAsync("_LogoutPartial")
                 </div>
             </div>
         </nav>
@@ -41,7 +41,7 @@
             <div class="flex-grow-1 bd-highlight col-lg-10 col-md-7 col-sm-7 p-0 m-0">
                 <div class="container-fluid margin-top">
                     @RenderBody()
-                </div>                
+                </div>
             </div>
         </div>
     </div>
@@ -52,6 +52,8 @@
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/jquery/dist/jquery.inputmask.min.js"></script>
+    <script src="~/lib/jquery/dist/jquery.maskMoney.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
