--- a/Views/Movie/Create.cshtml
+++ b/Views/Movie/Create.cshtml
@@ -19,7 +19,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Image" class="control-label"></label>
-                <input asp-for="Image" type="file" class="custom-file-input" runat="server" />
+                <input asp-for="Image" type="file" class="custom-file-input" runat="server" accept="image/jpeg,image/gif,image/png" />
                 <span asp-validation-for="Image" class="text-danger"></span>
             </div>
             <div class="form-group">
