--- a/Views/Movie/Index.cshtml
+++ b/Views/Movie/Index.cshtml
@@ -5,7 +5,7 @@
 }
 <div class="container-fluid">
     <div class="row">
-        <div class="col-md-8 pl-0"><h1>Filmes |<a asp-action="Create" class="btn btn-link pl-2 pr-2">Criar<i class="fas fa-plus pl-2"></i></a></h1></div>
+        <div class="col-md-8 pl-0"><h1>Filmes |<a asp-action="Create" class="btn btn-link pl-2 pr-2">CADASTRAR<i class="fas fa-plus pl-2"></i></a></h1></div>
         <div class="col-md-4">
             <form asp-action="Index" method="get">
                 <div class="row">
