--- a/Views/Session/Index.cshtml
+++ b/Views/Session/Index.cshtml
@@ -4,9 +4,20 @@
     ViewData["Title"] = "Sessões";
 }
 
-
 <div class="row">
-    <div class="col-md-12"><h1>Sessões |<a asp-action="Create" class="btn btn-link pl-2">ADICIONAR  <i class="fas fa-plus"></i></a></h1></div>
+    <div class="col-md-12">
+        @if (ViewBag.MoviesCount > 0)
+        {
+            <h1>Sessões |<a asp-action="Create" class="btn btn-link">CADASTRAR<i class="fas fa-plus pl-2"></i></a></h1>
+        }
+        else
+        {
+            <h1>Sessões</h1>
+            <div class="alert alert-info mt-2" role="alert">
+                O <u>Cadastro</u> de sessões ficará disponível ao existir pelo menos um <b>Filme</b> cadastrado no sistema.
+            </div>
+        }
+    </div>
 </div>
 
 <table class="table table-striped table-hover table-bordered">
